--- a/HandMSemanticSearch.ipynb
+++ b/HandMSemanticSearch.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# Semantic Search of HM Dresses"
       ],
-      "id": "5dce97a9-9df2-49c3-864a-7e73bf97ac63"
+      "id": "e0ea5fe3-5e71-4ab9-be0f-6aa9527f6918"
     },
     {
       "cell_type": "code",
@@ -18,7 +18,7 @@
         "os.environ['KAGGLE_USERNAME'] = ''\n",
         "os.environ['KAGGLE_KEY'] = ''"
       ],
-      "id": "9e1697a4"
+      "id": "2545c354"
     },
     {
       "cell_type": "code",
@@ -30,7 +30,7 @@
         "api = KaggleApi()\n",
         "api.authenticate()"
       ],
-      "id": "8d197608"
+      "id": "cc9cdc0b"
     },
     {
       "cell_type": "code",
@@ -67,7 +67,7 @@
         "        sys.stderr = old_stderr\n",
         "        warnings.resetwarnings()"
       ],
-      "id": "9bd99060"
+      "id": "40e0aa9d"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
         "import matplotlib.pyplot as plt\n",
         "from IPython.display import display, Markdown"
       ],
-      "id": "7cab82cd"
+      "id": "3a2b32d4"
     },
     {
       "cell_type": "code",
@@ -118,7 +118,7 @@
         "\n",
         "    return f\"{padded_id}.jpg\""
       ],
-      "id": "7cdc8832"
+      "id": "3ccf8d72"
     },
     {
       "cell_type": "code",
@@ -153,6 +153,9 @@
         "        except Exception as e:\n",
         "            print(f\"Error in initialization: {e}\")\n",
         "            raise\n",
+        "\n",
+        "    def get_product_name(self, idx):\n",
+        "        return self.product_names[idx]\n",
         "    \n",
         "    def get_article_image(self, article_id: str) -> Image.Image:\n",
         "        \"\"\"Load image for a given article ID.\"\"\"\n",
@@ -202,7 +205,7 @@
         "**Product Code:** `{self.product_codes[idx]}`  \n",
         "**Article IDs:** `{self.article_ids_str[idx]}`\n",
         "\n",
-        "**Description:**  \n",
+        "**Embedded String:**  \n",
         "{self.embedding_strings[idx]}\n",
         "\n",
         "---\n",
@@ -233,7 +236,7 @@
         "\n",
         "searcher = ProductSearcher()"
       ],
-      "id": "631ac795"
+      "id": "712fbac1"
     },
     {
       "cell_type": "code",
@@ -241,9 +244,24 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "searcher.print_search_results(\"Socks for holiday\")"
+        "searcher.print_search_results(\"Socks for holiday\")\n",
+        "#hits=searcher.search(\"Socks for holiday\", 3)\n",
+        "\n",
+        "#idx_first = hits[0][0]\n",
+        "#idx_second = hits[1][0]\n",
+        "#idx_third = hits[2][0]\n",
+        "\n",
+        "#similarity_first = hits[0][1]\n",
+        "#similarity_second = hits[1][1]\n",
+        "#similarity_third = hits[2][1]\n",
+        "\n",
+        "#print(searcher.get_product_name(idx_first))\n",
+        "#print(searcher.get_product_name(idx_second))\n",
+        "#print(searcher.get_product_name(idx_third))\n",
+        "\n",
+        "#searcher.print_search_results(\"Socks for holiday\")"
       ],
-      "id": "e1f316f5"
+      "id": "8dc52baf"
     },
     {
       "cell_type": "code",
@@ -251,9 +269,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "searcher.print_search_results(\"A party dress for a dance\")"
+        "searcher.print_search_results(\"A party dress for a dance for woman\")"
       ],
-      "id": "c3262dd0"
+      "id": "a5d5f0bd"
     }
   ],
   "nbformat": 4,
