adding HandMRag example

--- a/HandMSemanticSearch.ipynb
+++ b/HandMSemanticSearch.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# Semantic Search of HM Dresses"
       ],
-      "id": "bc08fe65-e81d-461a-926c-a1b0372e55eb"
+      "id": "508e0baf-ba11-4bbe-8500-945a185feef0"
     },
     {
       "cell_type": "code",
@@ -18,7 +18,7 @@
         "os.environ['KAGGLE_USERNAME'] = ''\n",
         "os.environ['KAGGLE_KEY'] = ''"
       ],
-      "id": "dc23f1de"
+      "id": "2e7ca191"
     },
     {
       "cell_type": "code",
@@ -30,7 +30,7 @@
         "api = KaggleApi()\n",
         "api.authenticate()"
       ],
-      "id": "fe9a7623"
+      "id": "455f918f"
     },
     {
       "cell_type": "code",
@@ -67,7 +67,7 @@
         "        sys.stderr = old_stderr\n",
         "        warnings.resetwarnings()"
       ],
-      "id": "339fac5f"
+      "id": "0d6a4a25"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
         "import matplotlib.pyplot as plt\n",
         "from IPython.display import display, Markdown"
       ],
-      "id": "ca804a66"
+      "id": "79893d61"
     },
     {
       "cell_type": "code",
@@ -118,7 +118,7 @@
         "\n",
         "    return f\"{padded_id}.jpg\""
       ],
-      "id": "ba5ec7bb"
+      "id": "24fdb41c"
     },
     {
       "cell_type": "code",
@@ -156,6 +156,9 @@
         "\n",
         "    def get_product_name(self, idx):\n",
         "        return self.product_names[idx]\n",
+        "\n",
+        "    def get_embedding_string(self, idx):\n",
+        "        return self.embedding_strings[idx]\n",
         "    \n",
         "    def get_article_image(self, article_id: str) -> Image.Image:\n",
         "        \"\"\"Load image for a given article ID.\"\"\"\n",
@@ -236,7 +239,7 @@
         "\n",
         "searcher = ProductSearcher()"
       ],
-      "id": "abe74e57"
+      "id": "1a554ac3"
     },
     {
       "cell_type": "code",
@@ -244,24 +247,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "searcher.print_search_results(\"Socks for holiday\")\n",
-        "#hits=searcher.search(\"Socks for holiday\", 3)\n",
+        "#searcher.print_search_results(\"Socks for holiday\")\n",
         "\n",
-        "#idx_first = hits[0][0]\n",
-        "#idx_second = hits[1][0]\n",
-        "#idx_third = hits[2][0]\n",
+        "hits=searcher.search(\"Socks for holiday\", 3)\n",
+        "\n",
+        "idx_first = hits[0][0]\n",
+        "idx_second = hits[1][0]\n",
+        "idx_third = hits[2][0]\n",
         "\n",
         "#similarity_first = hits[0][1]\n",
         "#similarity_second = hits[1][1]\n",
         "#similarity_third = hits[2][1]\n",
         "\n",
-        "#print(searcher.get_product_name(idx_first))\n",
-        "#print(searcher.get_product_name(idx_second))\n",
-        "#print(searcher.get_product_name(idx_third))\n",
+        "print(searcher.get_product_name(idx_first))\n",
+        "print(searcher.get_product_name(idx_second))\n",
+        "print(searcher.get_product_name(idx_third))\n",
+        "\n",
+        "print(searcher.get_embedding_string(idx_first))\n",
+        "print(searcher.get_embedding_string(idx_second))\n",
+        "print(searcher.get_embedding_string(idx_third))\n",
         "\n",
         "#searcher.print_search_results(\"Socks for holiday\")"
       ],
-      "id": "eff2014d"
+      "id": "0144dceb"
     },
     {
       "cell_type": "code",
@@ -271,7 +279,7 @@
       "source": [
         "searcher.print_search_results(\"A party dress for a dance for woman\")"
       ],
-      "id": "9788538c"
+      "id": "eaff4e89"
     }
   ],
   "nbformat": 4,
