fixing interactive H and M

--- a/HandMSemanticSearch.ipynb
+++ b/HandMSemanticSearch.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# Semantic Search of HM Dresses"
       ],
-      "id": "508e0baf-ba11-4bbe-8500-945a185feef0"
+      "id": "7ae4784d-f915-45cf-98ec-e7910bd1dcf9"
     },
     {
       "cell_type": "code",
@@ -18,7 +18,7 @@
         "os.environ['KAGGLE_USERNAME'] = ''\n",
         "os.environ['KAGGLE_KEY'] = ''"
       ],
-      "id": "2e7ca191"
+      "id": "91626f43"
     },
     {
       "cell_type": "code",
@@ -30,7 +30,7 @@
         "api = KaggleApi()\n",
         "api.authenticate()"
       ],
-      "id": "455f918f"
+      "id": "25be7f6d"
     },
     {
       "cell_type": "code",
@@ -67,7 +67,7 @@
         "        sys.stderr = old_stderr\n",
         "        warnings.resetwarnings()"
       ],
-      "id": "0d6a4a25"
+      "id": "5727e492"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
         "import matplotlib.pyplot as plt\n",
         "from IPython.display import display, Markdown"
       ],
-      "id": "79893d61"
+      "id": "477c4f88"
     },
     {
       "cell_type": "code",
@@ -118,7 +118,7 @@
         "\n",
         "    return f\"{padded_id}.jpg\""
       ],
-      "id": "24fdb41c"
+      "id": "be9e1494"
     },
     {
       "cell_type": "code",
@@ -239,7 +239,7 @@
         "\n",
         "searcher = ProductSearcher()"
       ],
-      "id": "1a554ac3"
+      "id": "c50bb65b"
     },
     {
       "cell_type": "code",
@@ -269,7 +269,7 @@
         "\n",
         "#searcher.print_search_results(\"Socks for holiday\")"
       ],
-      "id": "0144dceb"
+      "id": "b4408a98"
     },
     {
       "cell_type": "code",
@@ -279,7 +279,79 @@
       "source": [
         "searcher.print_search_results(\"A party dress for a dance for woman\")"
       ],
-      "id": "eaff4e89"
+      "id": "4a0fe820"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "searcher.print_search_results(\"Socks for a holiday\")"
+      ],
+      "id": "92f4b005"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "searcher.print_search_results(\"Motorcycle clothes\")"
+      ],
+      "id": "cabfa4fc"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from ipywidgets import widgets\n",
+        "from IPython.display import display, clear_output\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
+        "\n",
+        "def create_interactive_search():\n",
+        "    # Create the search box, submit button, and output area\n",
+        "    search_box = widgets.Text(\n",
+        "        value='',\n",
+        "        placeholder='Enter your search query (type \"quit\" to exit)',\n",
+        "        description='Search:',\n",
+        "        layout=widgets.Layout(width='600px')\n",
+        "    )\n",
+        "    submit_button = widgets.Button(\n",
+        "        description='Submit',\n",
+        "        button_style='primary',  # 'success', 'info', 'warning', 'danger' or ''\n",
+        "        tooltip='Click to search or press Enter',\n",
+        "        icon='search'  # Optional icon\n",
+        "    )\n",
+        "    output_area = widgets.Output()\n",
+        "    \n",
+        "    # Function to handle search logic\n",
+        "    def handle_search(_):\n",
+        "        query = search_box.value\n",
+        "        with output_area:\n",
+        "            clear_output()\n",
+        "            if query.lower().strip() == 'quit':\n",
+        "                print(\"Search terminated.\")\n",
+        "            elif query.strip():  # Only search if there's actually a query\n",
+        "                # Replace this with your actual search logic\n",
+        "                searcher.print_search_results(query)\n",
+        "            else:\n",
+        "                print(\"Please enter a search query.\")\n",
+        "    \n",
+        "    # Bind the button click event\n",
+        "    submit_button.on_click(handle_search)\n",
+        "    \n",
+        "    # Display the interface\n",
+        "    display(widgets.HBox([search_box, submit_button]))\n",
+        "    display(output_area)\n",
+        "\n",
+        "# Create and display the interactive search interface\n",
+        "create_interactive_search()"
+      ],
+      "id": "32549678"
     }
   ],
   "nbformat": 4,
